--- a/public/css/elks-events-bootstrap-grid.css
+++ b/public/css/elks-events-bootstrap-grid.css
@@ -20,6 +20,7 @@
   box-sizing: border-box;
 }
 
+/*
 .container {
   margin-right: auto;
   margin-left: auto;
@@ -41,6 +42,8 @@
     width: 1170px;
   }
 }
+*/
+
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
