--- a/public/css/elks-events-public.css
+++ b/public/css/elks-events-public.css
@@ -68,27 +68,29 @@
 */ 
 
 #map { 
-	height:450px; 
+	height: 450px; 
 }
 
 #map #infowindow {
-	margin:0.5em 0;
-	max-width:300px;
-	text-align: center;
+	margin: 0.5em 0;
+	max-width: 300px;
 }
 
 #map #infowindow h2 {
-	margin:0.5em 0 0 0;
-	font-size:1em;
+	margin: 0;
+	font-size: 1em;
 }
 
 #map #infowindow img {
 	max-width: 100%;
-	width: 180px;
+	width: 100%;
+	height: 120px;
+	object-fit: cover;
 }
 
 #map #infowindow p {
-	margin:0 0 1em 0;
+	margin: 0 0 1em 0;
+	line-height: 1.2em;
 }
 
 #no-geo article {
