--- a/public/css/elks-events-public.css
+++ b/public/css/elks-events-public.css
@@ -8,8 +8,22 @@
 }
 
 #e2-events .event {
+	padding: 0 0 10px 0;
 	margin: 20px 0;
 	border-radius: 2px;
+	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.1),0 2px 10px 0 rgba(0,0,0,0.1);
+}
+
+#e2-events .event img {
+	object-fit: cover;
+	width: 100%;
+	max-width: 100%;
+	height: 100px;
+}
+
+#e2-events div.event-details {
+	padding-left: 30px;
+	padding-right: 30px;
 }
 
 #e2-events h3, #e2-events h4 {
