--- a/public/css/elks-events-public.css
+++ b/public/css/elks-events-public.css
@@ -12,7 +12,7 @@
 	padding: 0 0 10px 0;
 	margin: 20px 0;
 	border-radius: 2px;
-	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.1),0 2px 10px 0 rgba(0,0,0,0.1);
+	/*box-shadow: 0 2px 5px 0 rgba(0,0,0,0.1),0 2px 10px 0 rgba(0,0,0,0.1);*/
 }
 
 #e2-events .event img {
