--- a/public/css/elks-events-public.css
+++ b/public/css/elks-events-public.css
@@ -9,9 +9,10 @@
 }
 
 #e2-events .event {
-	padding: 0 0 10px 0;
+	padding: 0 0 20px 0;
 	margin: 20px 0;
 	border-radius: 2px;
+	border-bottom: solid 1px #e0e0e0;
 	/*box-shadow: 0 2px 5px 0 rgba(0,0,0,0.1),0 2px 10px 0 rgba(0,0,0,0.1);*/
 }
 
@@ -25,20 +26,33 @@
 /* Small screens only */
 @media (max-width: 767px) {
 
-	#e2-events div.event-details {
-		padding-left: 30px;
-		padding-right: 30px;
+	#e2-events h2 {
+		text-align: center;
 	}
+
+	#e2-events .event {
+		margin-left:-20px;
+		margin-right:-20px;
+	}
+
+	#e2-events h3 {
+		margin-top:10px;
+	}
+
 }
 
 /* Larger screens only */
 @media (min-width: 768px) {
 
+	#e2-events .event.first {
+		border-top: 1px solid #e0e0e0;
+		padding-top: 20px;
+	}
+
 	#e2-events .event-image-container {
 		display: flex;
 		flex-direction: row;
 		overflow: hidden;
-		margin-bottom: -10px;
 		padding-right: 0;
 	}
 
@@ -46,8 +60,8 @@
 		height: 100%;
 		width: 100%;
 		max-width: none;
-		min-height: 120px;
-		max-height: 120px;
+		min-height: 100px;
+		max-height: 100px;
 	}
 
 }
@@ -55,12 +69,6 @@
 #e2-events h3, #e2-events h4 {
 	margin:0;
 	padding:0;
-}
-
-#e2-events h3 {
-	font-size: 14px;
-	margin-top:10px;
-	margin-right:10px;
 }
 
 #e2-events h4:before {
