--- a/public/css/elks-events-public.css
+++ b/public/css/elks-events-public.css
@@ -11,9 +11,7 @@
 #e2-events .event {
 	padding: 0 0 20px 0;
 	margin: 20px 0;
-	border-radius: 2px;
 	border-bottom: solid 1px #e0e0e0;
-	/*box-shadow: 0 2px 5px 0 rgba(0,0,0,0.1),0 2px 10px 0 rgba(0,0,0,0.1);*/
 }
 
 #e2-events .event img {
@@ -26,17 +24,15 @@
 /* Small screens only */
 @media (max-width: 767px) {
 
-	#e2-events h2 {
-		text-align: center;
-	}
-
 	#e2-events .event {
 		margin-left:-20px;
 		margin-right:-20px;
 	}
 
-	#e2-events h3 {
-		margin-top:10px;
+	#e2-events .event-details {
+		padding-left: 30px;
+	    padding-right: 30px;
+	    margin-top: 10px;
 	}
 
 }
